--- a/item.html
+++ b/item.html
@@ -2,18 +2,18 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>Барбершоп «Бородинский»</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <title>Набор для путешествий &laquo;Baxter of California&raquo;</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <header class="main-header">
-      <div class="container">
-        <nav class="mai-navigation">
+      <div class="container clearfix">
+        <nav class="main-navigation">
           <ul>
             <li><a href="#">Информация</a></li>
             <li><a href="#">Новости</a></li>
-            <li class="active"><span>Прайс-лист</span></li>
-            <li><a href="#">Магазин</a></li>
+            <li><a href="#">Прайс-лист</a></li>
+            <li class="active"><span>Магазин</span></li>
             <li><a href="#">Контакты</a></li>
           </ul>
         </nav>
@@ -25,32 +25,38 @@
 
     <main class="container">
       <div class="inner-page-title">
-        <h1>Прайс-лист</h1>
+        <h1>Набор для путешествий &laquo;Baxter of California&raquo;</h1>
         <ul class="breadcrumbs">
           <li><a href="index.html">Главная</a></li>
-          <li class="current">Прайс-лист</li>
+          <li><a href="shop.html">Магазин</a></li>
+          <li><a href="#">Средства для ухода</a></li>
+          <li class="current">Набор для путешествий &laquo;Baxter of California&raquo;</li>
         </ul>
       </div>
       <div class="inner-content clearfix">
         <div class="inner-content-left">
-          <img src="" alt="">
-          <img src="" alt="">
-          <img src="" alt="">
-          <img src="" alt="">
+          <section class="item-gallery">
+            <a class="item-photo big" href="#"><img src="" height="" width="" alt="Baxter of California-1"></a>
+            <a class="item-photo small" href="#"><img src="" height="" width="" alt="Baxter of California-2"></a>
+            <a class="item-photo small" href="#"><img src="" height="" width="" alt="Baxter of California-3"></a>
+            <a class="item-photo small" href="#"><img src="" height="" width="" alt="Baxter of California-4"></a>
+          </section>
         </div>
         <div class="inner-content-right">
-          <div class="item-in-stock clearfix">
-            <span class="in-stock">Есть в наличии</span>
-            <span class="sku">Артикул: Dexter-AE</span>
+          <div class="item-status clearfix">
+            <span class="item-stock">Есть в наличии</span>
+            <span class="item-sku">Артикул: Dexter-AE</span>
           </div>
-          <p>Travel Kit&nbsp;&mdash; необходимый аксессуар во&nbsp;время любого путешествия. В&nbsp;аккуратной кожаной сумке находится все, что нужно для бритья и&nbsp;ухода за&nbsp;кожей во&nbsp;время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.</p>
+          <div class="item-description">
+            <p>Travel Kit&nbsp;&mdash; необходимый аксессуар во&nbsp;время любого путешествия. В&nbsp;аккуратной кожаной сумке находится все, что нужно для бритья и&nbsp;ухода за&nbsp;кожей во&nbsp;время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.</p>
+          </div>
           <div class="item-buy">
             <span class="buy-price">2 900 РУБ.</span>
             <a class="btn" href="#">Купить</a>
           </div>
           <div class="item-bundle">
-            <b>В набор входят:</b>
-            <ul>
+            <h2>В набор входят:</h2>
+            <ul class="custom-list-1">
               <li>Средство для умывания (50 мл)</li>
               <li>Увлажняющий крем (50 мл)</li>
               <li>Крем для бритья (50 мл)</li>
@@ -65,20 +71,20 @@
     <footer class="main-footer">
       <div class="container clearfix">
         <section class="footer-contacts">
-          Барбершоп «Бородинский»<br>
+          Барбершоп &laquo;Бородинский&raquo;<br>
           Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
           <a href="#">Как нас найти?</a><br>
           Телефон: +7 (495) 666-02-66
         </section>
         <section class="footer-social">
           <p>Давайте дружить!</p>
-          <a class="btn-social btn-social-vk" href="#">Вконтакте</a>
-          <a class="btn-social btn-social-fb" href="#">Фейсбук</a>
-          <a class="btn-social btn-social-insta" href="#">Инстаграм</a>
+          <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
+          <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
+          <a class="social-btn social-btn-insta" href="#">Инстаграм</a>
         </section>
         <section class="footer-copyright">
           <p>Разработано:</p>
-          <a class="btn" href="#">HTML Academy</a>
+          <a class="btn" href="https://htmlacademy.ru">HTML Academy</a>
         </section>
       </div>
     </footer>
