--- a/price.html
+++ b/price.html
@@ -2,13 +2,13 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>Барбершоп «Бородинский»</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <title>Прайс-лист</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <header class="main-header">
-      <div class="container">
-        <nav class="mai-navigation">
+      <div class="container clearfix">
+        <nav class="main-navigation">
           <ul>
             <li><a href="#">Информация</a></li>
             <li><a href="#">Новости</a></li>
@@ -69,7 +69,7 @@
   	      	<p class="short-text">Наша парикмахерская занимается исключительно мужскими стрижками. Стрижка каждого клиента для нас — это уникальная и продуманная до мелочей работа. Мы не работаем на количество, мы делаем качество.</p>
   				</div>
   				<div class="inner-column-right">
-  	      	<p>Наша мастерская расположена в центре города, поэтому сделать стильную стрижку можно в любое время, даже в обеденный перерыв. Здесь вы можете погрузиться в удобную для вас атмосферу, чувствовать себя комфортно и свободно!</p>
+  	      	<p class="short-text">Наша мастерская расположена в центре города, поэтому сделать стильную стрижку можно в любое время, даже в обеденный перерыв. Здесь вы можете погрузиться в удобную для вас атмосферу, чувствовать себя комфортно и свободно!</p>
   				</div>
   			</div>
   		</div>
@@ -78,20 +78,20 @@
     <footer class="main-footer">
       <div class="container clearfix">
         <section class="footer-contacts">
-          Барбершоп «Бородинский»<br>
+          Барбершоп &laquo;Бородинский&raquo;<br>
           Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
           <a href="#">Как нас найти?</a><br>
           Телефон: +7 (495) 666-02-66
         </section>
         <section class="footer-social">
           <p>Давайте дружить!</p>
-          <a class="btn-social btn-social-vk" href="#">Вконтакте</a>
-          <a class="btn-social btn-social-fb" href="#">Фейсбук</a>
-          <a class="btn-social btn-social-insta" href="#">Инстаграм</a>
+          <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
+          <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
+          <a class="social-btn social-btn-insta" href="#">Инстаграм</a>
         </section>
         <section class="footer-copyright">
           <p>Разработано:</p>
-          <a class="btn" href="#">HTML Academy</a>
+          <a class="btn" href="https://htmlacademy.ru">HTML Academy</a>
         </section>
       </div>
     </footer>
