Layout markup in all html files

--- a/item.html
+++ b/item.html
@@ -12,7 +12,7 @@
           <ul>
             <li><a href="#">Информация</a></li>
             <li><a href="#">Новости</a></li>
-            <li><a href="#">Прайс-лист</a></li>
+            <li><a href="price.html">Прайс-лист</a></li>
             <li class="active"><span>Магазин</span></li>
             <li><a href="#">Контакты</a></li>
           </ul>
@@ -33,8 +33,8 @@
           <li class="current">Набор для путешествий &laquo;Baxter of California&raquo;</li>
         </ul>
       </div>
-      <div class="inner-content clearfix">
-        <div class="inner-content-left">
+      <div class="item-content clearfix">
+        <div class="item-content-left">
           <section class="item-gallery">
             <a class="item-photo big" href="#"><img src="" height="" width="" alt="Baxter of California-1"></a>
             <a class="item-photo small" href="#"><img src="" height="" width="" alt="Baxter of California-2"></a>
@@ -42,7 +42,7 @@
             <a class="item-photo small" href="#"><img src="" height="" width="" alt="Baxter of California-4"></a>
           </section>
         </div>
-        <div class="inner-content-right">
+        <div class="item-content-right">
           <div class="item-status clearfix">
             <span class="item-stock">Есть в наличии</span>
             <span class="item-sku">Артикул: Dexter-AE</span>
@@ -68,7 +68,7 @@
       </div>
     </main>
 
-    <footer class="main-footer">
+    <footer class="main-footer main-footer-shadow">
       <div class="container clearfix">
         <section class="footer-contacts">
           Барбершоп &laquo;Бородинский&raquo;<br>
