--- a/price.html
+++ b/price.html
@@ -13,7 +13,7 @@
             <li><a href="#">Информация</a></li>
             <li><a href="#">Новости</a></li>
             <li class="active"><span>Прайс-лист</span></li>
-            <li><a href="#">Магазин</a></li>
+            <li><a href="shop.html">Магазин</a></li>
             <li><a href="#">Контакты</a></li>
           </ul>
         </nav>
@@ -31,12 +31,12 @@
   				<li class="current">Прайс-лист</li>
   			</ul>
   		</div>
-  		<div class="inner-content">
+  		<div class="info-content">
   			<div class="big-heading">
   				<h2>Истинно мужская классика</h2>
   			</div>
-  			<div class="inner-columns clearfix">
-  				<div class="inner-column-left">
+  			<div class="info-columns clearfix">
+  				<div class="info-column-left">
   					<h2>Мы используем только<br> лучшие средства:</h2>
   		      <ul class="custom-list-1">
   		        <li>Baxter of California</li>
@@ -45,7 +45,7 @@
   		        <li>Malin+Goetz</li>
   		      </ul>
   				</div>
-  				<div class="inner-column-right">
+  				<div class="info-column-right">
   					<h2>Цены на услуги<br> наших мастеров:</h2>
   		      <table class="prices-table">
   		        <tr>
@@ -63,19 +63,19 @@
   		      </table>
   				</div>
   			</div>
-  			<div class="inner-columns clearfix">
+  			<div class="info-columns clearfix">
   				<h2>Несколько слов о нас:</h2>
-  				<div class="inner-column-left">
+  				<div class="info-column-left">
   	      	<p class="short-text">Наша парикмахерская занимается исключительно мужскими стрижками. Стрижка каждого клиента для нас — это уникальная и продуманная до мелочей работа. Мы не работаем на количество, мы делаем качество.</p>
   				</div>
-  				<div class="inner-column-right">
+  				<div class="info-column-right">
   	      	<p class="short-text">Наша мастерская расположена в центре города, поэтому сделать стильную стрижку можно в любое время, даже в обеденный перерыв. Здесь вы можете погрузиться в удобную для вас атмосферу, чувствовать себя комфортно и свободно!</p>
   				</div>
   			</div>
   		</div>
     </main>
 
-    <footer class="main-footer">
+    <footer class="main-footer main-footer-shadow">
       <div class="container clearfix">
         <section class="footer-contacts">
           Барбершоп &laquo;Бородинский&raquo;<br>
