--- a/shop.html
+++ b/shop.html
@@ -32,7 +32,7 @@
           <li class="current">Средства для ухода</li>
         </ul>
       </div>
-      <div class="inner-content clearfix">
+      <div class="catalog-content clearfix">
         <form class="catalog-filters">
           <fieldset class="filter-manufacturers">
             <legend>Производители:</legend>
@@ -87,74 +87,62 @@
         <div class="catalog-gallery">
           <article class="gallery-item">
             <a href="item.html"><img src="" width="" height="" alt="Набор для путешестрий &laquo;BAXTER OF CALIFORNIA&raquo;" title="&laquo;BAXTER OF CALIFORNIA&raquo;"></a>
-            <div class="item-description">
-              <h1>
-                <a href="item.html"><span>Набор для путешестрий</span> <span>&laquo;BAXTER OF CALIFORNIA&raquo;</span></a>
-              </h1>
-              <div class="item-buy">
-                <span class="buy-price">2 900 РУБ.</span>
-                <a class="btn" href="#">Купить</a>
-              </div>
+            <h2 class="item-description">
+              <a href="item.html"><span class="category">Набор для путешестрий</span> <span class="title">&laquo;BAXTER OF CALIFORNIA&raquo;</span></a>
+            </h2>
+            <div class="item-buy">
+              <span class="buy-price">2 900 РУБ.</span>
+              <a class="btn" href="#">Купить</a>
             </div>
           </article>
           <article class="gallery-item">
             <img src="" width="" height="" alt="Увлажняющий кондиционер &laquo;BAXTER OF CALIFORNIA&raquo;" title="&laquo;BAXTER OF CALIFORNIA&raquo;">
-            <div class="item-description">
-              <h1>
-                <a href="#"><span>Увлажняющий кондиционер</span> <span>&laquo;BAXTER OF CALIFORNIA&raquo;</span></a>
-              </h1>
-              <div class="item-buy">
-                <span class="buy-price">750 РУБ.</span>
-                <a class="btn" href="#">Купить</a>
-              </div>
+            <h2 class="item-description">
+              <a href="#"><span class="category">Увлажняющий кондиционер</span> <span class="title">&laquo;BAXTER OF CALIFORNIA&raquo;</span></a>
+            </h2>
+            <div class="item-buy">
+              <span class="buy-price">750 РУБ.</span>
+              <a class="btn" href="#">Купить</a>
             </div>
           </article>
           <article class="gallery-item">
             <img src="" width="" height="" alt="Гель для волос &laquo;SUAVECITO&raquo;" title="&laquo;SUAVECITO&raquo;">
-            <div class="item-description">
-              <h1>
-                <a href="#"><span>Гель для волос</span> <span>&laquo;SUAVECITO&raquo;</span></a>
-              </h1>
-              <div class="item-buy">
-                <span class="buy-price">290 РУБ.</span>
-                <a class="btn" href="#">Купить</a>
-              </div>
+            <h2 class="item-description">
+              <a href="#"><span class="category">Гель для волос</span> <span class="title">&laquo;SUAVECITO&raquo;</span></a>
+            </h2>
+            <div class="item-buy">
+              <span class="buy-price">290 РУБ.</span>
+              <a class="btn" href="#">Купить</a>
             </div>
           </article>
           <article class="gallery-item">
             <img src="" width="" height="" alt="Глина для укладки волос &laquo;AMERICAN CREW&raquo;" title="&laquo;AMERICAN CREW&raquo;">
-            <div class="item-description">
-              <h1>
-                <a href="#"><span>Глина для укладки волос</span> <span>&laquo;AMERICAN CREW&raquo;</span></a>
-              </h1>
-              <div class="item-buy">
-                <span class="buy-price">2 900 РУБ.</span>
-                <a class="btn" href="#">Купить</a>
-              </div>
+            <h2 class="item-description">
+              <a href="#"><span class="category">Глина для укладки волос</span> <span class="title">&laquo;AMERICAN CREW&raquo;</span></a>
+            </h2>
+            <div class="item-buy">
+              <span class="buy-price">2 900 РУБ.</span>
+              <a class="btn" href="#">Купить</a>
             </div>
           </article>
           <article class="gallery-item">
             <img src="" width="" height="" alt="Гель для волос &laquo;AMERICAN CREW&raquo;" title="&laquo;AMERICAN CREW&raquo;">
-            <div class="item-description">
-              <h1>
-                <a href="#"><span>Гель для волос</span> <span>&laquo;AMERICAN CREW&raquo;</span></a>
-              </h1>
-              <div class="item-buy">
-                <span class="buy-price">2 900 РУБ.</span>
-                <a class="btn" href="#">Купить</a>
-              </div>
+            <h2 class="item-description">
+              <a href="#"><span class="category">Гель для волос</span> <span class="title">&laquo;AMERICAN CREW&raquo;</span></a>
+            </h2>
+            <div class="item-buy">
+              <span class="buy-price">2 900 РУБ.</span>
+              <a class="btn" href="#">Купить</a>
             </div>
           </article>
           <article class="gallery-item">
             <img src="" width="" height="" alt="Набор для бритья &laquo;BAXTER OF CALIFORNIA&raquo;" title="&laquo;BAXTER OF CALIFORNIA&raquo;">
-            <div class="item-description">
-              <h1>
-                <a href="#"><span>Набор для бритья</span> <span>&laquo;BAXTER OF CALIFORNIA&raquo;</span></a>
-              </h1>
-              <div class="item-buy">
-                <span class="buy-price">3 900 РУБ.</span>
-                <a class="btn" href="#">Купить</a>
-              </div>
+            <h2 class="item-description">
+              <a href="#"><span class="category">Набор для бритья</span> <span class="title">&laquo;BAXTER OF CALIFORNIA&raquo;</span></a>
+            </h2>
+            <div class="item-buy">
+              <span class="buy-price">3 900 РУБ.</span>
+              <a class="btn" href="#">Купить</a>
             </div>
           </article>
           <div class="catalog-paginator">
@@ -167,7 +155,7 @@
       </div>
     </main>
 
-    <footer class="main-footer">
+    <footer class="main-footer main-footer-shadow">
       <div class="container clearfix">
         <section class="footer-contacts">
           Барбершоп &laquo;Бородинский&raquo;<br>
