Positioning markup in index.html. Added normalize and fonts

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Барбершоп &laquo;Бородинский&raquo;</title>
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=cyrillic" rel="stylesheet">
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
+    <!-- <link rel="stylesheet" href="css/outlines.css"> -->
   </head>
   <body>
     <header class="main-header">
@@ -30,7 +33,7 @@
       <section class="features clearfix">
         <div class="features-item">
           <b class="features-name">Быстро</b>
-          <p>Мы делаем свою работу быстро! Два часа пролетят незаметно и вы - счастливый обладатель стильной стрижки-минутки!</p>
+          <p>Мы делаем свою работу быстро! Два часа пролетят незаметно и вы &mdash; счастливый обладатель стильной стрижки-минутки!</p>
         </div>
         <div class="features-item">
           <b class="features-name">Круто</b>
@@ -38,7 +41,7 @@
         </div>
         <div class="features-item">
           <b class="features-name">Дорого</b>
-          <p>Наши мастера - профессионалы своего дела и не могут стоить дешево. К тому же, разве цена не дает определенный статус?</p>
+          <p>Наши мастера &mdash; профессионалы своего дела и не могут стоить дешево. К тому же, разве цена не дает определенный статус?</p>
         </div>
       </section>
 
@@ -61,7 +64,7 @@
           <h2 class="index-content-title">Фотогаллерея</h2>
           <div class="gallery">
             <figure class="gallery-content">
-              <img src="img/gallery-001.jpg" width="286" height="164" alt="">
+              <img src="img/gallery-001.jpg" width="286" height="164" alt="Галлерея">
             </figure>
             <button class="btn gallery-prev" disabled>Назад</button>
             <button class="btn gallery-next">Вперед</button>
@@ -103,7 +106,7 @@
       <div class="container clearfix">
         <section class="footer-contacts">
           Барбершоп &laquo;Бородинский&raquo;<br>
-          Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
+          Адрес: г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
           <a href="#">Как нас найти?</a><br>
           Телефон: +7 (495) 666-02-66
         </section>
