--- a/item.html
+++ b/item.html
@@ -7,15 +7,18 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
-  <body>
+  <body class="inner-page">
     <header class="main-header">
       <div class="container clearfix">
         <nav class="main-navigation">
+          <a class="header-logo" href="index.html">
+            <img src="img/header-logo.png" width="111" height="24" alt="Главная">
+          </a>
           <ul>
             <li><a href="#">Информация</a></li>
             <li><a href="#">Новости</a></li>
             <li><a href="price.html">Прайс-лист</a></li>
-            <li class="active"><span>Магазин</span></li>
+            <li class="active"><a href="shop.html">Магазин</a></li>
             <li><a href="#">Контакты</a></li>
           </ul>
         </nav>
@@ -70,7 +73,7 @@
       </div>
     </main>
 
-    <footer class="main-footer main-footer-shadow">
+    <footer class="main-footer">
       <div class="container clearfix">
         <section class="footer-contacts">
           Барбершоп &laquo;Бородинский&raquo;<br>
