--- a/price.html
+++ b/price.html
@@ -7,10 +7,13 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
-  <body>
+  <body class="inner-page">
     <header class="main-header">
       <div class="container clearfix">
         <nav class="main-navigation">
+          <a class="header-logo" href="index.html">
+            <img src="img/header-logo.png" width="111" height="24" alt="Главная">
+          </a>
           <ul>
             <li><a href="#">Информация</a></li>
             <li><a href="#">Новости</a></li>
@@ -77,7 +80,7 @@
   		</div>
     </main>
 
-    <footer class="main-footer main-footer-shadow">
+    <footer class="main-footer">
       <div class="container clearfix">
         <section class="footer-contacts">
           Барбершоп &laquo;Бородинский&raquo;<br>
