Shop items and pagination markup in shop.html

--- a/shop.html
+++ b/shop.html
@@ -6,7 +6,6 @@
     <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/outlines.css">
   </head>
   <body class="inner-page">
     <header class="main-header">
@@ -94,72 +93,74 @@
           <button class="btn" type="submit">Показать</button>
         </form>
         <div class="catalog-gallery">
-          <article class="gallery-item">
-            <a href="item.html"><img src="" width="" height="" alt="Набор для путешестрий &laquo;BAXTER OF CALIFORNIA&raquo;" title="&laquo;BAXTER OF CALIFORNIA&raquo;"></a>
-            <h2 class="item-description">
-              <a href="item.html"><span class="category">Набор для путешестрий</span> <span class="title">&laquo;BAXTER OF CALIFORNIA&raquo;</span></a>
-            </h2>
-            <div class="item-buy">
-              <span class="buy-price">2 900 РУБ.</span>
-              <a class="btn" href="#">Купить</a>
-            </div>
-          </article>
-          <article class="gallery-item">
-            <img src="" width="" height="" alt="Увлажняющий кондиционер &laquo;BAXTER OF CALIFORNIA&raquo;" title="&laquo;BAXTER OF CALIFORNIA&raquo;">
-            <h2 class="item-description">
-              <a href="#"><span class="category">Увлажняющий кондиционер</span> <span class="title">&laquo;BAXTER OF CALIFORNIA&raquo;</span></a>
-            </h2>
-            <div class="item-buy">
-              <span class="buy-price">750 РУБ.</span>
-              <a class="btn" href="#">Купить</a>
-            </div>
-          </article>
-          <article class="gallery-item">
-            <img src="" width="" height="" alt="Гель для волос &laquo;SUAVECITO&raquo;" title="&laquo;SUAVECITO&raquo;">
-            <h2 class="item-description">
-              <a href="#"><span class="category">Гель для волос</span> <span class="title">&laquo;SUAVECITO&raquo;</span></a>
-            </h2>
-            <div class="item-buy">
-              <span class="buy-price">290 РУБ.</span>
-              <a class="btn" href="#">Купить</a>
-            </div>
-          </article>
-          <article class="gallery-item">
-            <img src="" width="" height="" alt="Глина для укладки волос &laquo;AMERICAN CREW&raquo;" title="&laquo;AMERICAN CREW&raquo;">
-            <h2 class="item-description">
-              <a href="#"><span class="category">Глина для укладки волос</span> <span class="title">&laquo;AMERICAN CREW&raquo;</span></a>
-            </h2>
-            <div class="item-buy">
-              <span class="buy-price">2 900 РУБ.</span>
-              <a class="btn" href="#">Купить</a>
-            </div>
-          </article>
-          <article class="gallery-item">
-            <img src="" width="" height="" alt="Гель для волос &laquo;AMERICAN CREW&raquo;" title="&laquo;AMERICAN CREW&raquo;">
-            <h2 class="item-description">
-              <a href="#"><span class="category">Гель для волос</span> <span class="title">&laquo;AMERICAN CREW&raquo;</span></a>
-            </h2>
-            <div class="item-buy">
-              <span class="buy-price">2 900 РУБ.</span>
-              <a class="btn" href="#">Купить</a>
-            </div>
-          </article>
-          <article class="gallery-item">
-            <img src="" width="" height="" alt="Набор для бритья &laquo;BAXTER OF CALIFORNIA&raquo;" title="&laquo;BAXTER OF CALIFORNIA&raquo;">
-            <h2 class="item-description">
-              <a href="#"><span class="category">Набор для бритья</span> <span class="title">&laquo;BAXTER OF CALIFORNIA&raquo;</span></a>
-            </h2>
-            <div class="item-buy">
-              <span class="buy-price">3 900 РУБ.</span>
-              <a class="btn" href="#">Купить</a>
-            </div>
-          </article>
-          <div class="catalog-paginator">
-            <a class="btn" href="#">1</a>
-            <a class="btn active-page" href="#">2</a>
-            <a class="btn" href="#">3</a>
-            <a class="btn" href="#">4</a>
+          <div class="gallery-items">
+            <article class="gallery-item">
+              <a href="item.html"><img src="img/item1.jpg" width="220" height="165" alt="Набор для путешестрий &laquo;BAXTER OF CALIFORNIA&raquo;" title="&laquo;BAXTER OF CALIFORNIA&raquo;"></a>
+              <div class="item-description">
+                <a href="item.html"><span class="category">Набор для путешестрий</span> <span class="title">&laquo;BAXTER OF CALIFORNIA&raquo;</span></a>
+                <div class="item-buy">
+                  <span class="buy-price">2 900 РУБ.</span>
+                  <a class="btn" href="#">Купить</a>
+                </div>
+              </div>
+            </article>
+            <article class="gallery-item">
+              <img src="img/item2.jpg" width="220" height="165" alt="Увлажняющий кондиционер &laquo;BAXTER OF CALIFORNIA&raquo;" title="&laquo;BAXTER OF CALIFORNIA&raquo;">
+              <div class="item-description">
+                <a href="#"><span class="category">Увлажняющий кондиционер</span> <span class="title">&laquo;BAXTER OF CALIFORNIA&raquo;</span></a>
+                <div class="item-buy">
+                  <span class="buy-price">750 РУБ.</span>
+                  <a class="btn" href="#">Купить</a>
+                </div>
+              </div>
+            </article>
+            <article class="gallery-item">
+              <img src="img/item3.jpg" width="220" height="165" alt="Гель для волос &laquo;SUAVECITO&raquo;" title="&laquo;SUAVECITO&raquo;">
+              <div class="item-description">
+                <a href="#"><span class="category">Гель для волос</span> <span class="title">&laquo;SUAVECITO&raquo;</span></a>
+                <div class="item-buy">
+                  <span class="buy-price">290 РУБ.</span>
+                  <a class="btn" href="#">Купить</a>
+                </div>
+              </div>
+            </article>
+            <article class="gallery-item">
+              <img src="img/item4.jpg" width="220" height="165" alt="Глина для укладки волос &laquo;AMERICAN CREW&raquo;" title="&laquo;AMERICAN CREW&raquo;">
+              <div class="item-description">
+                <a href="#"><span class="category">Глина для укладки волос</span> <span class="title">&laquo;AMERICAN CREW&raquo;</span></a>
+                <div class="item-buy">
+                  <span class="buy-price">2 900 РУБ.</span>
+                  <a class="btn" href="#">Купить</a>
+                </div>
+              </div>
+            </article>
+            <article class="gallery-item">
+              <img src="img/item5.jpg" width="220" height="165" alt="Гель для волос &laquo;AMERICAN CREW&raquo;" title="&laquo;AMERICAN CREW&raquo;">
+              <div class="item-description">
+                <a href="#"><span class="category">Гель для волос</span> <span class="title">&laquo;AMERICAN CREW&raquo;</span></a>
+                <div class="item-buy">
+                  <span class="buy-price">2 900 РУБ.</span>
+                  <a class="btn" href="#">Купить</a>
+                </div>
+              </div>
+            </article>
+            <article class="gallery-item">
+              <img src="img/item6.jpg" width="220" height="165" alt="Набор для бритья &laquo;BAXTER OF CALIFORNIA&raquo;" title="&laquo;BAXTER OF CALIFORNIA&raquo;">
+              <div class="item-description">
+                <a href="#"><span class="category">Набор для бритья</span> <span class="title">&laquo;BAXTER OF CALIFORNIA&raquo;</span></a>
+                <div class="item-buy">
+                  <span class="buy-price">3 900 РУБ.</span>
+                  <a class="btn" href="#">Купить</a>
+                </div>
+              </div>
+            </article>
           </div>
+          <ul class="catalog-paginator">
+            <li><a href="#">1</a></li>
+            <li class="current"><span>2</span></li>
+            <li><a href="#">3</a></li>
+            <li><a href="#">4</a></li>
+          </ul>
         </div>
       </div>
     </main>
