Item.html markup

--- a/item.html
+++ b/item.html
@@ -40,12 +40,14 @@
       </div>
       <div class="item-content clearfix">
         <div class="item-content-left">
-          <section class="item-gallery">
-            <a class="item-photo big" href="#"><img src="" height="" width="" alt="Baxter of California-1"></a>
-            <a class="item-photo small" href="#"><img src="" height="" width="" alt="Baxter of California-2"></a>
-            <a class="item-photo small" href="#"><img src="" height="" width="" alt="Baxter of California-3"></a>
-            <a class="item-photo small" href="#"><img src="" height="" width="" alt="Baxter of California-4"></a>
-          </section>
+          <figure class="main-picture">
+            <a href="#"><img src="img/item1-1big.jpg" height="498" width="460" alt="Baxter of California-1"></a>
+          </figure>
+          <figure class="preview-container">
+            <a href="#"><img src="img/item1-2small.jpg" height="149" width="140" alt="Baxter of California-2"></a>
+            <a href="#"><img src="img/item1-3small.jpg" height="149" width="140" alt="Baxter of California-3"></a>
+            <a href="#"><img src="img/item1-4small.jpg" height="149" width="140" alt="Baxter of California-4"></a>
+          </figure>
         </div>
         <div class="item-content-right">
           <div class="item-status clearfix">
