--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
       <div class="container clearfix">
         <nav class="main-navigation">
           <ul>
-            <li><a href="#">Информация</a></li>
-            <li><a href="#">Новости</a></li>
+            <li><a href="#information">Информация</a></li>
+            <li><a href="#news">Новости</a></li>
             <li><a href="price.html">Прайс-лист</a></li>
             <li><a href="shop.html">Магазин</a></li>
-            <li><a href="#">Контакты</a></li>
+            <li><a href="#contacts">Контакты</a></li>
           </ul>
         </nav>
         <div class="user-block">
@@ -29,7 +29,7 @@
       <div class="index-logo">
         <img src="img/index-logo.png" width="368" height="204" alt="Барбершоп &laquo;Бородинский&raquo;">
       </div>
-      <section class="features clearfix">
+      <section class="features clearfix" id="information">
         <div class="features-item">
           <b class="features-name">Быстро</b>
           <p>Мы делаем свою работу быстро! Два часа пролетят незаметно и вы &mdash; счастливый обладатель стильной стрижки-минутки!</p>
@@ -46,7 +46,7 @@
 
       <div class="index-content clearfix">
         <div class="index-content-left">
-          <h2 class="index-content-title">Новости</h2>
+          <h2 class="index-content-title" id="news">Новости</h2>
           <ul class="news-preview">
             <li>
               <p>Нам наконец завезли Ягермайстер! Теперь вы можете пропустить стаканчик во время стрижки</p>
@@ -73,7 +73,7 @@
 
       <div class="index-content clearfix">
         <div class="index-content-left">
-          <h2 class="index-content-title">Контактная информация</h2>
+          <h2 class="index-content-title" id="contacts">Контактная информация</h2>
           <p>
             Барбершоп &laquo;Бородинский&raquo;<br>
             Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
