--- a/item.html
+++ b/item.html
@@ -15,11 +15,11 @@
             <img src="img/header-logo.png" width="111" height="24" alt="Главная">
           </a>
           <ul>
-            <li><a href="#">Информация</a></li>
-            <li><a href="#">Новости</a></li>
+            <li><a href="index.html#information">Информация</a></li>
+            <li><a href="index.html#news">Новости</a></li>
             <li><a href="price.html">Прайс-лист</a></li>
             <li class="active"><a href="shop.html">Магазин</a></li>
-            <li><a href="#">Контакты</a></li>
+            <li><a href="index.html#contacts">Контакты</a></li>
           </ul>
         </nav>
         <div class="user-block">
