--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             пн — пт: с 10:00 до 22:00<br>
             сб — вс: с 10:00 до 19:00
           </p>
-          <a class="btn" href="#">Как проехать</a>
+          <a class="btn js-open-map" href="#">Как проехать</a>
           <a class="btn" href="#">Обратная связь</a>
         </div>
         <div class="index-content-right">
@@ -140,8 +140,10 @@
 
     <div class="modal-content-map">
       <button class="modal-content-close" type="button" title="Закрыть">Закрыть</button>
+      <iframe src="https://yandex.ru/map-widget/v1/-/CBQnJSEGXA" width="766" height="560" frameborder="0"></iframe>
     </div>
 
     <div class="modal-overlay"></div>
+    <script src="js/script.js"></script>
   </body>
 </html>
