--- a/item.html
+++ b/item.html
@@ -80,7 +80,7 @@
         <section class="footer-contacts">
           Барбершоп &laquo;Бородинский&raquo;<br>
           Адрес: г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
-          <a href="#">Как нас найти?</a><br>
+          <a class="js-open-map" href="#">Как нас найти?</a><br>
           Телефон: +7 (495) 666-02-66
         </section>
         <section class="footer-social">
@@ -110,6 +110,11 @@
         <a class="restore" href="#">Я забыл пароль!</a>
         <button class="btn" type="submit">Войти</button>
       </form>
+    </div>
+
+    <div class="modal-content-map">
+      <button class="modal-content-close" type="button" title="Закрыть">Закрыть</button>
+      <iframe src="https://yandex.ru/map-widget/v1/-/CBQnJSEGXA" width="766" height="560" frameborder="0"></iframe>
     </div>
 
     <div class="modal-overlay"></div>
