Changed map-popup to google maps

--- a/index.html
+++ b/index.html
@@ -140,7 +140,8 @@
 
     <div class="modal-content-map">
       <button class="modal-content-close" type="button" title="Закрыть">Закрыть</button>
-      <iframe src="https://yandex.ru/map-widget/v1/-/CBQnJSEGXA" width="766" height="560" frameborder="0"></iframe>
+      <!-- <iframe src="https://yandex.ru/map-widget/v1/-/CBQnJSEGXA" width="766" height="560" frameborder="0"></iframe> -->
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5991043651577!2d30.3208946157235!3d59.93879418187626!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2sBolshaya+Konyushennaya+ul.%2C+19%2C+Sankt-Peterburg%2C+191186!5e0!3m2!1sen!2sru!4v1498857587116" width="766" height="560" frameborder="0" style="border:0" allowfullscreen></iframe>
     </div>
 
     <div class="modal-overlay"></div>
